refactor search and champ filter works

--- a/app/views/searches/_stats.html.erb
+++ b/app/views/searches/_stats.html.erb
@@ -1,4 +1,9 @@
 
+
+<%=image_tag(@image)%>
+<h1> <%=@name%> </h1>
+<h2><%=@title%> </h2>
+<h3><%=@blurb %> </h3>
 <% if array.empty? %>
 <h1> NO STATS FOR THIS CHAMPION <h1>
 <% else %>
