--- a/app/assets/stylesheets/searches.css.scss
+++ b/app/assets/stylesheets/searches.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the searches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.summoner {
+  height: 200px;
+  width: 300px;
+  color: white;
+  background-repeat: no-repeat;
+  background-size: 100%
+}
