--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -25,7 +25,7 @@
             <nav class="pull-right nav-collapse collapse">
               <ul id="menu-main" class="nav">
                 <li><a title="portfolio" href="#portfolio">Match History</a></li>
-                <li><a title="services" href="#services">Placeholder</a></li>
+                <li><a title="services" href="/">Home</a></li>
                 <li><a title="news" href="#news">Placeholder</a></li>
                 <li><a title="team" href="#team">Placeholder</a></li>
                 <li><a title="contact" href="#contact">Placeholder</a></li>
@@ -178,6 +178,30 @@
 
 
 
+<section id="news" class="single-page scrollblock">
+      <div class="container">
+        <div class="align"><i class="icon-pencil-circled"></i></div>
+        <h1>Lifetime Stats</h1>
+        <!-- Three columns -->
+        <div class="row">
+          <article class="span4 post"> 
+            <!-- /.inside -->
+          </article>
+          <!-- /.span4 -->
+          <article class="span4 post ajax"> 
+            
+          </article>
+          <!-- /.span4 -->
+          <article class="span4 post"> 
+           
+          </article>
+          <!-- /.span4 -->
+        </div>
+        <!-- /.row -->
+        <a href="/" class="btn btn-large">Back to Home</a> </div>
+      <!-- /.container -->
+    </section>
+    <hr>
 
 
 
@@ -186,11 +210,5 @@
 
 
 
-
-
-  <h1> HERE ARE YOUR STATS </h1> 
-<div class="stats">
-
-  </div>
 
 
