--- a/app/views/searches/update_search.js.erb
+++ b/app/views/searches/update_search.js.erb
@@ -1,7 +1,7 @@
 (function () {
   var commentHtml = "<%= j render('searches/stats', :array => @array, :name => @name, :title => @title, :blurb => @blurb, :image => @image) %>";
-  $('.stats').text("")
-  $('.stats').append(commentHtml);
+  $('.ajax').empty()
+  $('.ajax').append(commentHtml);
   console.log("its working!")
 })();
 
